# clinical-rag-workflow

./: .env.example  .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
adapters/: __init__.py  base.py
api/: __init__.py  main.py  models.py  routes.py
core/: __init__.py  generator.py  pipeline.py  retriever.py  schema.py  verifier.py
docs/: adapters.md  architecture.md  quickstart.md
examples/adhd_neuraxis/: README.md  adapter.py  sample_findings.json
examples/adhd_neuraxis/knowledge/: arns_2013_meta_analysis.txt  barry_2003_review.txt  eeg_subtypes_clarke.txt  machine_learning_eeg_adhd.txt  theta_beta_ratio.txt
examples/generic/: README.md  sample_findings.json
tests/integration/: test_full_pipeline.py
tests/unit/: test_api.py  test_app_main.py  test_generator.py  test_pipeline.py  test_retriever.py  test_schema.py  test_verifier.py
web/: app.js  index.html  style.css
